# ParticleIdentification

./: CMakeLists.txt
resources/: _resources.cmake
resources/config/snemo/common/reconstruction/1.0/: particle_identification.conf
resources/examples/ex00/: README.rst  cut_manager.conf  flreconstruct.conf  pipeline_modules.defs  service_manager.conf  services.conf
resources/examples/ex00/cuts/: pid_cuts.conf  topology_cuts.conf
resources/examples/ex01/: README.rst
resources/examples/ex01/config/: pipeline.conf
resources/examples/ex02/: flpid_module.py  fltopology.py
resources/examples/ex02/config/: channel_cuts.conf  cut_manager.conf  cut_service.conf  dlls.conf  io_modules.conf  module_manager.conf  pid_cuts.conf  pipeline_modules.conf  service_manager.conf
source/falaise/snemo/cuts/: angle_measurement_cut.cc  angle_measurement_cut.h  base_channel_cut.cc  base_channel_cut.h  channel_1e1a_cut.cc  channel_1e1a_cut.h  channel_1e1p_cut.cc  channel_1e1p_cut.h  channel_1eNg_cut.cc  channel_1eNg_cut.h  channel_1e_cut.cc  channel_1e_cut.h  channel_2eNg_cut.cc  channel_2eNg_cut.h  channel_2e_cut.cc  channel_2e_cut.h  channel_2p_cut.cc  channel_2p_cut.h  channel_cut.cc  channel_cut.h  energy_measurement_cut.cc  energy_measurement_cut.h  pid_cut.cc  pid_cut.h  tof_measurement_cut.cc  tof_measurement_cut.h  topology_cut.cc  topology_cut.h  topology_data_cut.cc  topology_data_cut.h  vertices_measurement_cut.cc  vertices_measurement_cut.h
source/falaise/snemo/datamodels/: TOF_measurement.cc  TOF_measurement.h  angle_measurement.cc  angle_measurement.h  base_topology_measurement.cc  base_topology_measurement.h  base_topology_measurement.ipp  base_topology_pattern.cc  base_topology_pattern.h  base_topology_pattern.ipp  delta_vertices_measurement.cc  delta_vertices_measurement.h  delta_vertices_measurement.ipp  energy_measurement.cc  energy_measurement.h  pid_utils.cc  pid_utils.h  the_serializable_bis.cc  the_serializable_bis.h  the_serializable_bis.ipp  tof_measurement.cc  tof_measurement.h  topology_1e1a_pattern.cc  topology_1e1a_pattern.h  topology_1e1a_pattern.ipp  topology_1e1g_pattern.cc  topology_1e1g_pattern.h  topology_1e1g_pattern.ipp  topology_1e1p_pattern.cc  topology_1e1p_pattern.h  topology_1e1p_pattern.ipp  topology_1eNg_pattern.cc  topology_1eNg_pattern.h  topology_1eNg_pattern.ipp  topology_1e_pattern.cc  topology_1e_pattern.h  topology_1e_pattern.ipp  topology_2e1a_pattern.cc  topology_2e1a_pattern.h  topology_2e1a_pattern.ipp  (+21 more)
source/falaise/snemo/datamodels/to_be_removed/: topology_measurement.cc  topology_measurement.h  topology_measurement.ipp
source/falaise/snemo/reconstruction/: angle_driver.cc  angle_driver.h  angle_measurement_driver.cc  angle_measurement_driver.h  base_topology_builder.cc  base_topology_builder.h  delta_vertices_driver.cc  delta_vertices_driver.h  energy_driver.cc  energy_driver.h  particle_identification_driver.cc  particle_identification_driver.h  particle_identification_module.cc  particle_identification_module.h  tof_driver.cc  tof_driver.h  topology_1e1a_builder.cc  topology_1e1a_builder.h  topology_1e1p_builder.cc  topology_1e1p_builder.h  topology_1eNg_builder.cc  topology_1eNg_builder.h  topology_1e_builder.cc  topology_1e_builder.h  topology_2eNg_builder.cc  topology_2eNg_builder.h  topology_2e_builder.cc  topology_2e_builder.h  topology_2p_builder.cc  topology_2p_builder.h  topology_driver.cc  topology_driver.h  topology_module.cc  topology_module.h  vertex_driver.cc  vertex_driver.h
testing/: CMakeLists.txt  test_angle_driver.cxx  test_angle_measurement_cut.cxx  test_base_topology_pattern.cxx  test_delta_vertices_driver.cxx  test_energy_driver.cxx  test_tof_driver.cxx  test_tof_measurement_cut.cxx  test_topology_data.cxx  test_vertex_driver.cxx
